fix goreleaser version (#20)
Signed-off-by: Brenno Oliveira <brenno.oliveira@deliveryhero.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,9 +1,12 @@
+version: 2
+
 release:
   github:
     owner: brennoo
     name: go-gmp
 
-builds: []
+builds:
+  - skip: true
 
 changelog:
   use: github 
