--- a/.codacy.yaml
+++ b/.codacy.yaml
@@ -5,5 +5,23 @@ engines:
   complexity:
     exclude_paths:
       - "**/*_test.go"
+  file-structure:
+    exclude_paths:
+      - "**/*_test.go"
+  function-cognitive-complexity:
+    exclude_paths:
+      - "**/*_test.go"
+  function-length:
+    exclude_paths:
+      - "**/*_test.go"
+  line-length:
+    exclude_paths:
+      - "**/*_test.go"
+  method-complexity:
+    exclude_paths:
+      - "**/*_test.go"
+  method-length:
+    exclude_paths:
+      - "**/*_test.go"
 exclude_paths:
   - "examples/**"
