--- a/.codacy.yaml
+++ b/.codacy.yaml
@@ -2,26 +2,42 @@ engines:
   duplication:
     exclude_paths:
       - "**/*_test.go"
+      - "commands/filtering/options.go"
+      - "commands/filtering/options_test.go"
   complexity:
     exclude_paths:
       - "**/*_test.go"
+      - "commands/filtering/options.go"
+      - "commands/filtering/options_test.go"
   file-structure:
     exclude_paths:
       - "**/*_test.go"
+      - "commands/filtering/options.go"
+      - "commands/filtering/options_test.go"
   function-cognitive-complexity:
     exclude_paths:
       - "**/*_test.go"
+      - "commands/filtering/options.go"
+      - "commands/filtering/options_test.go"
   function-length:
     exclude_paths:
       - "**/*_test.go"
+      - "commands/filtering/options.go"
+      - "commands/filtering/options_test.go"
   line-length:
     exclude_paths:
       - "**/*_test.go"
+      - "commands/filtering/options.go"
+      - "commands/filtering/options_test.go"
   method-complexity:
     exclude_paths:
       - "**/*_test.go"
+      - "commands/filtering/options.go"
+      - "commands/filtering/options_test.go"
   method-length:
     exclude_paths:
       - "**/*_test.go"
+      - "commands/filtering/options.go"
+      - "commands/filtering/options_test.go"
 exclude_paths:
   - "examples/**"
